Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/mpegts/gst_atsc_section.h

/**
 * GstMpegtsSectionATSCTableID:
 * @GST_MTS_TABLE_ID_ATSC_MASTER_GUIDE: Master Guide Table (MGT)
 * @GST_MTS_TABLE_ID_ATSC_TERRESTRIAL_VIRTUAL_CHANNEL: Terrestrial Virtual Channel Table (TVCT)
 * @GST_MTS_TABLE_ID_ATSC_CABLE_VIRTUAL_CHANNEL: Cable Virtual Channel Table (CVCT)
 * @GST_MTS_TABLE_ID_ATSC_RATING_REGION: Rating Region Table (RRT)
 * @GST_MTS_TABLE_ID_ATSC_EVENT_INFORMATION: Event Information Table (EIT)
 * @GST_MTS_TABLE_ID_ATSC_CHANNEL_OR_EVENT_EXTENDED_TEXT: Extended Text Table (ETT)
 * @GST_MTS_TABLE_ID_ATSC_SYSTEM_TIME: System Time Table (STT)
 * @GST_MTS_TABLE_ID_ATSC_DATA_EVENT: A/90: Data Event Table (DET)
 * @GST_MTS_TABLE_ID_ATSC_DATA_SERVICE: A/90: Data Service Table (DST)
 * @GST_MTS_TABLE_ID_ATSC_NETWORK_RESOURCE: A/90: Network Resources Table (NRT)
 * @GST_MTS_TABLE_ID_ATSC_LONG_TERM_SERVICE: A/90: Long Term Service Table (LTST)
 * @GST_MTS_TABLE_ID_ATSC_DIRECTED_CHANNEL_CHANGE: Directed Channel Change Table (DCCT)
 * @GST_MTS_TABLE_ID_ATSC_DIRECTED_CHANNEL_CHANGE_SECTION_CODE: Directed Channel Change Selection Code Table (DCCSCT)
 * @GST_MTS_TABLE_ID_ATSC_SATELLITE_VIRTUAL_CHANNEL: A/81: Satellite Virtual Channel Table
 *
 * Values for a #GstMpegtsSection table_id.
 *
 * These are the registered ATSC section `table_id` variants. Unless specified
 * otherwise, they are defined in the "ATSC A/65" specification.
 *
 * see also: #GstMpegtsSectionTableID and other variants.
 */
typedef enum {

  /* ATSC (A/65) */
  GST_MTS_TABLE_ID_ATSC_MASTER_GUIDE                    = 0xC7,
  GST_MTS_TABLE_ID_ATSC_TERRESTRIAL_VIRTUAL_CHANNEL     = 0xC8,
  GST_MTS_TABLE_ID_ATSC_CABLE_VIRTUAL_CHANNEL           = 0xC9,
  GST_MTS_TABLE_ID_ATSC_RATING_REGION                   = 0xCA,
  GST_MTS_TABLE_ID_ATSC_EVENT_INFORMATION               = 0xCB,
  GST_MTS_TABLE_ID_ATSC_CHANNEL_OR_EVENT_EXTENDED_TEXT  = 0xCC,
  GST_MTS_TABLE_ID_ATSC_SYSTEM_TIME                     = 0xCD,
  /* ATSC (A/90) */
  GST_MTS_TABLE_ID_ATSC_DATA_EVENT                      = 0xCE,
  GST_MTS_TABLE_ID_ATSC_DATA_SERVICE                    = 0xCF,

  /* ATSC (A/57B) */
  /**
   * GST_MTS_TABLE_ID_ATSC_PROGRAM_IDENTIFIER:
   *
   * A/57B: Program Identifier Table.
   *
   * Since: 1.20
   */
  GST_MTS_TABLE_ID_ATSC_PROGRAM_IDENTIFIER		= 0xD0,
  /* ATSC (A/90) */
  GST_MTS_TABLE_ID_ATSC_NETWORK_RESOURCE                = 0xD1,
  GST_MTS_TABLE_ID_ATSC_LONG_TERM_SERVICE               = 0xD2,
  /* ATSC (A/65) */
  GST_MTS_TABLE_ID_ATSC_DIRECTED_CHANNEL_CHANGE         = 0xD3,
  GST_MTS_TABLE_ID_ATSC_DIRECTED_CHANNEL_CHANGE_SECTION_CODE = 0xD4,
  /* 0xD5-0xD9 covered in CEA/SCTE */
  GST_MTS_TABLE_ID_ATSC_AGGREGATE_EVENT_INFORMATION     = 0xD6,
  GST_MTS_TABLE_ID_ATSC_AGGREGATE_EXTENDED_TEXT         = 0xD7,
  GST_MTS_TABLE_ID_ATSC_AGGREGATE_DATA_EVENT            = 0xD9,
  /*  */
  GST_MTS_TABLE_ID_ATSC_SATELLITE_VIRTUAL_CHANNEL       = 0xDA,
} GstMpegtsSectionATSCTableID;
/**
 * GstMpegtsATSCStreamType:
 * @GST_MPEGTS_STREAM_TYPE_ATSC_DCII_VIDEO:  DigiCipher II video | Identical to ITU-T Rec. H.262 | ISO/IEC 13818-2 Video
 * @GST_MPEGTS_STREAM_TYPE_ATSC_AUDIO_AC3:   ATSC A/53 Audio | AC-3
 * @GST_MPEGTS_STREAM_TYPE_ATSC_SUBTITLING:  SCTE-27 Subtitling
 * @GST_MPEGTS_STREAM_TYPE_ATSC_ISOCH_DATA:  SCTE-19 Isochronous data | Reserved
 * @GST_MPEGTS_STREAM_TYPE_ATSC_SIT:         SCTE-35 Splice Information Table
 * @GST_MPEGTS_STREAM_TYPE_ATSC_AUDIO_EAC3:  E-AC-3 A/52:2018
 * @GST_MPEGTS_STREAM_TYPE_ATSC_AUDIO_DTS_HD:  E-AC-3 A/107 (ATSC 2.0)
 *
 * Type of mpeg-ts streams for ATSC, as defined by the ATSC Code Points
 * Registry. For convenience, some stream types from %GstMpegtsScteStreamType
 * are also included.
 *
 * Since: 1.20
 */
typedef enum {
  GST_MPEGTS_STREAM_TYPE_ATSC_DCII_VIDEO = 0x80,
  GST_MPEGTS_STREAM_TYPE_ATSC_AUDIO_AC3  = 0x81,
  GST_MPEGTS_STREAM_TYPE_ATSC_SUBTITLING = 0x82,
  GST_MPEGTS_STREAM_TYPE_ATSC_ISOCH_DATA = 0x83,
  /* 0x84-0x85 : RESERVED */
  GST_MPEGTS_STREAM_TYPE_ATSC_SIT        = 0x86,
  GST_MPEGTS_STREAM_TYPE_ATSC_AUDIO_EAC3 = 0x87,
  GST_MPEGTS_STREAM_TYPE_ATSC_AUDIO_DTS_HD = 0x88,
} GstMpegtsATSCStreamType;
/* TVCT/CVCT */
#define GST_TYPE_MPEGTS_ATSC_VCT (gst_mpegts_atsc_vct_get_type ())
#define GST_TYPE_MPEGTS_ATSC_VCT_SOURCE (gst_mpegts_atsc_vct_source_get_type ())
typedef struct _GstMpegtsAtscVCT GstMpegtsAtscVCT;
GST_MPEGTS_API
GType gst_mpegts_atsc_vct_get_type (void);
GST_MPEGTS_API
GType gst_mpegts_atsc_vct_source_get_type (void);
GST_MPEGTS_API
const GstMpegtsAtscVCT * gst_mpegts_section_get_atsc_tvct (GstMpegtsSection * section);
GST_MPEGTS_API
const GstMpegtsAtscVCT * gst_mpegts_section_get_atsc_cvct (GstMpegtsSection * section);
/* MGT */
#define GST_TYPE_MPEGTS_ATSC_MGT (gst_mpegts_atsc_mgt_get_type ())
#define GST_TYPE_MPEGTS_ATSC_MGT_TABLE (gst_mpegts_atsc_mgt_table_get_type ())
typedef struct _GstMpegtsAtscMGT GstMpegtsAtscMGT;
typedef enum {
  GST_MPEGTS_ATSC_MGT_TABLE_TYPE_EIT0 = 0x0100,
  GST_MPEGTS_ATSC_MGT_TABLE_TYPE_EIT127 = 0x017F,
  GST_MPEGTS_ATSC_MGT_TABLE_TYPE_ETT0 = 0x0200,
  GST_MPEGTS_ATSC_MGT_TABLE_TYPE_ETT127 = 0x027F
} GstMpegtsAtscMGTTableType;
GST_MPEGTS_API
GType gst_mpegts_atsc_mgt_get_type (void);
GST_MPEGTS_API
GType gst_mpegts_atsc_mgt_table_get_type (void);
GST_MPEGTS_API
const GstMpegtsAtscMGT * gst_mpegts_section_get_atsc_mgt (GstMpegtsSection * section);
GST_MPEGTS_API
GstMpegtsSection * gst_mpegts_section_from_atsc_mgt (GstMpegtsAtscMGT * mgt);
GST_MPEGTS_API
GstMpegtsAtscMGT * gst_mpegts_atsc_mgt_new (void) ;
/* Multiple string structure (used in ETT and EIT) */

#define GST_TYPE_MPEGTS_ATSC_STRING_SEGMENT (gst_mpegts_atsc_string_segment_get_type())
#define GST_TYPE_MPEGTS_ATSC_MULT_STRING (gst_mpegts_atsc_mult_string_get_type())
typedef struct _GstMpegtsAtscStringSegment GstMpegtsAtscStringSegment;
GST_MPEGTS_API
const gchar * gst_mpegts_atsc_string_segment_get_string (GstMpegtsAtscStringSegment * seg);
GST_MPEGTS_API
gboolean
gst_mpegts_atsc_string_segment_set_string (GstMpegtsAtscStringSegment * seg,
                                           gchar *string,
                                           guint8 compression_type,
                                           guint8 mode);
GST_MPEGTS_API
GType gst_mpegts_atsc_string_segment_get_type (void);
GST_MPEGTS_API
GType gst_mpegts_atsc_mult_string_get_type (void);
/* EIT */

#define GST_TYPE_MPEGTS_ATSC_EIT_EVENT (gst_mpegts_atsc_eit_event_get_type())
#define GST_TYPE_MPEGTS_ATSC_EIT (gst_mpegts_atsc_eit_get_type())
typedef struct _GstMpegtsAtscEIT GstMpegtsAtscEIT;
GST_MPEGTS_API
GType gst_mpegts_atsc_eit_event_get_type (void);
GST_MPEGTS_API
GType gst_mpegts_atsc_eit_get_type (void);
GST_MPEGTS_API
const GstMpegtsAtscEIT *gst_mpegts_section_get_atsc_eit (GstMpegtsSection *section);
/* ETT */

#define GST_TYPE_MPEGTS_ATSC_ETT (gst_mpegts_atsc_ett_get_type())
typedef struct _GstMpegtsAtscETT GstMpegtsAtscETT;
GST_MPEGTS_API
GType gst_mpegts_atsc_ett_get_type (void);
GST_MPEGTS_API
const GstMpegtsAtscETT *gst_mpegts_section_get_atsc_ett (GstMpegtsSection *section);
/* STT */
#define GST_TYPE_MPEGTS_ATSC_STT (gst_mpegts_atsc_stt_get_type ())
typedef struct _GstMpegtsAtscSTT GstMpegtsAtscSTT;
GST_MPEGTS_API
GType gst_mpegts_atsc_stt_get_type (void);
GST_MPEGTS_API
const GstMpegtsAtscSTT * gst_mpegts_section_get_atsc_stt (GstMpegtsSection * section);
/* FIXME receive a non-const parameter but we only provide a const getter */

GST_MPEGTS_API
GstDateTime * gst_mpegts_atsc_stt_get_datetime_utc (GstMpegtsAtscSTT * stt) ;
GST_MPEGTS_API
GstMpegtsSection * gst_mpegts_section_from_atsc_stt (GstMpegtsAtscSTT * stt);
GST_MPEGTS_API
GstMpegtsAtscSTT * gst_mpegts_atsc_stt_new (void) ;
/* RRT */
#define GST_TYPE_MPEGTS_ATSC_RRT (gst_mpegts_atsc_rrt_get_type ())
#define GST_TYPE_MPEGTS_ATSC_RRT_DIMENSION (gst_mpegts_atsc_rrt_dimension_get_type ())
#define GST_TYPE_MPEGTS_ATSC_RRT_DIMENSION_VALUE (gst_mpegts_atsc_rrt_dimension_value_get_type ())
typedef struct _GstMpegtsAtscRRT GstMpegtsAtscRRT;
typedef struct _GstMpegtsAtscRRTDimension GstMpegtsAtscRRTDimension;
typedef struct _GstMpegtsAtscRRTDimensionValue GstMpegtsAtscRRTDimensionValue;
GST_MPEGTS_API
GType gst_mpegts_atsc_rrt_get_type (void);
GST_MPEGTS_API
GType gst_mpegts_atsc_rrt_dimension_get_type (void);
GST_MPEGTS_API
GType gst_mpegts_atsc_rrt_dimension_value_get_type (void);
GST_MPEGTS_API
const GstMpegtsAtscRRT * gst_mpegts_section_get_atsc_rrt (GstMpegtsSection * section);
GST_MPEGTS_API
GstMpegtsSection * gst_mpegts_section_from_atsc_rrt (GstMpegtsAtscRRT * rrt);
GST_MPEGTS_API
GstMpegtsAtscRRT * gst_mpegts_atsc_rrt_new (void) ;
GST_MPEGTS_API
GstMpegtsAtscRRTDimension * gst_mpegts_atsc_rrt_dimension_new (void) ;
GST_MPEGTS_API
GstMpegtsAtscRRTDimensionValue * gst_mpegts_atsc_rrt_dimension_value_new (void) ;